$Id$

2017-10-25  Christian Franke  <franke@computer.org>

	os_win32/smartd_warning.cmd: Add ability to run PowerShell scripts
	with '-M exec'.
	smartd.conf.5.in: Document new functionality.  Fix typo.

2017-10-25  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	 - add SATA Voyager GTX (#893)

2017-10-24  Christian Franke  <franke@computer.org>

	do_release: Update code signing key id.

	update-smart-drivedb.in: Add new mailing list address to database
	signing key.

2017-10-24  Alex Samorukov <samm@os2.kiev.ua>

	drivedb.h:
	 - add USB Voyager GTX (#893)
	 - add Phison based OEM SSD based on the firmware name (#853, #831)
	 - add Ultrastar 7K2 series (#892)
	 - add LITEON ZETA (LMH-*V2M-*) (#794)

2017-10-22  Christian Franke  <franke@computer.org>

	os_win32.cpp: Decode Windows 10 1709 build number.

	configure.ac: Fail instead of warn if no compiler option to accept
	C++11 found and '--with-cxx11-option' is not specified.

2017-10-19  Alex Samorukov <samm@os2.kiev.ua>

	scsicmds.h: increase SCSI_TIMEOUT_DEFAULT to 1 minute to work on the
	big JBOD arrays (#917)

2017-10-15  Christian Franke  <franke@computer.org>

	smartd.cpp: Use also device identify information to detect for
	duplicate devices (ticket #313).

	atacmds.cpp: Don't pass possibly unaligned pointers to swapx().
	This silences '-Waddress-of-packed-member' warning from clang++ 4.0
	(ticket #915).

2017-10-12  Alex Samorukov  <samm@os2.kiev.ua>

	os_linux.cpp: implemented support for the SG_IO V4 API. This should
	fix kernel warnings and other issues on the /dev/bsg SCSI devices.
	Based on the patch created by Circuitsoft (#782)

2017-10-11  Alex Samorukov  <samm@os2.kiev.ua>

	os_darwin.cpp: fix crash on --scan (regression from r4549)

2017-10-10  Christian Franke  <franke@computer.org>

	configure.ac, os_darwin.cpp: Align Darwin NVMe device scanning with
	other platforms: Disable unless '--with-nvme-devicescan' or '-d nvme'
	is specified.  Print related configure warning.
